--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><images/img src="sil.avif" alt=""></td>
+            <td><img src="sil.avif" alt=""></td>
             <td>
                 <h1>Emery</h1>
                 <p><em>New Computer <strong>programmer</strong></em></p>
